more spacing issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -87,7 +87,7 @@ input[type='number'] {
 	color: white;
 	border-radius: 15px;
 	height: 1.5rem;
-	margin: 0.5rem 0;
+	margin: 0.75rem 0;
 	cursor: pointer;
 }
 
