--- a/src/components/comboBox.scss
+++ b/src/components/comboBox.scss
@@ -1,5 +1,5 @@
 .comboBoxWrapper {
-	margin: 1.5rem 0rem 0.25rem 0rem;
+	margin: 1.25rem 0rem 0.25rem 0rem;
 }
 
 .comboBox {
